# x-plugin-codex

./: .mcp.json  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
src/x_plugin_codex/: __init__.py  server.py
tests/: test_server.py
