[project]
name = "x-plugin-codex"
version = "0.1.0"
description = "Codex MCP plugin for X/Twitter using the local x-cli."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.23.0",
]

[project.scripts]
x-plugin-codex-mcp = "x_plugin_codex.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.14",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x_plugin_codex"]
